<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feedbackActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPharmacy">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp">

            <ImageView
                android:id="@+id/imageView_arrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/todo"
                android:onClick="goBack"
                android:src="@drawable/ic_arrow_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.523" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <EditText
            android:id="@+id/editText_nameData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/imie"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editText_emailData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_emailData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editText_messageData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText_messageData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="16dp"

            android:hint="@string/wiadomosc"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/button_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginStart="105dp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="105dp"
            android:layout_marginRight="105dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPharmacy"
            android:text="@string/button_send"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />

        <Button
            android:id="@+id/button_details"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginStart="105dp"
            android:layout_marginLeft="105dp"
            android:layout_marginEnd="105dp"
            android:layout_marginRight="105dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPharmacy"
            android:enabled="false"
            android:text="@string/button_details"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />

    </LinearLayout>

</RelativeLayout>